fix: transform .pde & .ino basing on Arduino version rather than on extension

--- a/ino/make/Makefile.common.jinja
+++ b/ino/make/Makefile.common.jinja
@@ -1,18 +1,18 @@
 
-{% macro _transform_sketches(src_dir, ext, header, add_to) %}
-{% set pde = src_dir|glob(ext)|filemap(e.build_dir|pjoin(src_dir|basename), '%s.cpp') %}
+{% macro transform_sketches(src_dir, add_to) %}
+{% set pde = src_dir|glob('*.pde', '*.ino')|filemap(e.build_dir|pjoin(src_dir|basename), '%s.cpp') %}
+{% if e.arduino_lib_version.major %}
+    {% set header = 'Arduino.h' %}
+{% else %}
+    {% set header = 'WProgram.h' %}
+{% endif %}
 {% for source, target in pde.iterpaths() %}
 {{ target }} : {{ source }}
 	@mkdir -p {{ target|dirname }}
-	@echo '{{ header }}' > $@
+	@echo '#include <{{ header }}>' > $@
 	@cat {{ source }} >> $@
 {% endfor %}
 {% do add_to.extend(pde.targets()) %}
-{% endmacro %}
-
-{% macro transform_sketches(src_dir, add_to) %}
-{{ _transform_sketches(src_dir, '*.pde', '#include <WProgram.h>', add_to) }}
-{{ _transform_sketches(src_dir, '*.ino', '#include <Arduino.h>', add_to) }}
 {% endmacro %}
 
 {#
