--- a/ino/make/Makefile.jinja
+++ b/ino/make/Makefile.jinja
@@ -7,10 +7,15 @@
  #}
 {% macro compile(filemap, compiler) %}
 {% for source, target in filemap %}
+{% if source.path.startswith(src_build_dir) %}
+    {% set extra_flags = '-iquote ' ~ e.src_dir|pjoin(source.path|relative_to(src_build_dir))|dirname %}
+{% else %}
+    {% set extra_flags = '' %}
+{% endif %}
 {{ target.path }} : {{ source.path }}
 	@echo {{ (source.dirname|basename|pjoin(source.filename))|colorize('yellow') }}
 	@mkdir -p {{ target.path|dirname }}
-	{{v}}{{ compiler }} -o $@ -c $^
+	{{v}}{{ compiler }} {{ extra_flags }} -o $@ -c $^
 {% endfor %}
 {% endmacro %}
 
@@ -20,23 +25,6 @@
 
 {% macro compile_cpp(filemap) %}
 {{ compile(filemap, e.cxx ~ ' ' ~ e.cflags ~ ' ' ~ e.cxxflags) }}
-{% endmacro %}
-
-{% macro compile_ino(filemap) %}
-{% set cpps = filemap.sources()|filemap(src_build_dir, '%s.cpp') %}
-{% for source, target in filemap %}
-{% if e.arduino_lib_version.major %}
-    {% set header = 'Arduino.h' %}
-{% else %}
-    {% set header = 'WProgram.h' %}
-{% endif %}
-{% set cpp = cpps[source] %}
-{{ cpp.path }} : {{ source.path }}
-	@mkdir -p {{ cpp.dirname }}
-	@echo '#include <{{ header }}>' > $@
-	@cat {{ source }} >> $@
-{{ compile([(cpp, target)], e.cxx ~ ' ' ~ e.cflags ~ ' ' ~ e.cxxflags ~ ' -iquote ' ~ source.dirname) }}
-{% endfor %}
 {% endmacro %}
 
 {#
@@ -70,12 +58,6 @@
 {% endfor %}
 
 {#
- #   *.ino *.pde -> *.o
- #}
-{% set ino = e.src_dir|glob('*.pde', '*.ino')|filemap(src_build_dir, e.names.obj) %}
-{{ compile_ino(ino) }}
-
-{#
  #   *.c -> *.o
  #}
 {% set c = e.src_dir|glob('*.c')|filemap(src_build_dir, e.names.obj) %}
@@ -84,13 +66,13 @@
 {#
  #   *.cpp -> *.o
  #}
-{% set cpp = e.src_dir|glob('*.cpp')|filemap(src_build_dir, e.names.obj) %}
+{% set cpp = (e.src_dir|glob('*.cpp') + src_build_dir|glob('*.cpp'))|filemap(src_build_dir, e.names.obj) %}
 {{ compile_cpp(cpp) }}
 
 {#
  #   *.o -> elf
  #}
-{% set objs = c.target_paths() + cpp.target_paths() + ino.target_paths() + libs %}
+{% set objs = c.target_paths() + cpp.target_paths() + libs %}
 {% set elf = e.build_dir|pjoin('firmware.elf') %}
 {{ elf }} : {{ objs }}
 	@echo {{ 'Linking firmware.elf'|colorize('green') }}
