fix: put .d files in proper subdirs while building a library

--- a/ino/make/Makefile.deps.jinja
+++ b/ino/make/Makefile.deps.jinja
@@ -1,10 +1,18 @@
 
 {% from "Makefile.common.jinja" import iquote, src_build_dir with context %}
 
+{% set src_build_dir = e.build_dir|pjoin(src_dir|basename) %}
+
 {#
  #   *.c *.cpp -> *.d
  #}
-{% set cpp = (src_dir|glob('*.c', '*.cpp') + src_build_dir|glob('*.cpp'))|filemap(src_build_dir, e.names.deps) %}
+
+{% if src_dir == e.src_dir %}
+	{% set cpp = (src_dir|glob('*.c', '*.cpp') + src_build_dir|glob('*.cpp'))|filemap(src_build_dir, e.names.deps) %}
+{% else %}
+	{% set cpp = src_dir|glob('*.c', '*.cpp')|filemap(src_build_dir, e.names.deps) %}
+{% endif %}
+
 {% for source, target in cpp %}
 {{ target.path }} : {{ source.path }}
 	@mkdir -p {{ target.path|dirname }}
