--- a/ino/make/Makefile.deps.jinja
+++ b/ino/make/Makefile.deps.jinja
@@ -17,8 +17,10 @@
 {{ target.path }} : {{ source.path }}
 	@mkdir -p {{ target.path|dirname }}
 	{{v}}{{ e.cc }} {{ e.cflags }} {{ inc_flags }} {{ iquote(source) }} -MM $^ > $@
-	{# prepend build path to a target in generated file #}
-	@echo -n "{{ target.path|dirname }}{{ slash }}" | cat - $@ > $@~ && mv $@~ $@
+	{# prepend build path to a target in the generated file and 
+	   add .d file itself as a target so that changes in a header file would rebuild dependency files
+	   See: http://make.paulandlesley.org/autodep.html #}
+	@echo -n "{{ target.path }} {{ target.path|dirname }}{{ slash }}" | cat - $@ > $@~ && mv $@~ $@
 {% endfor %}
 
 {#
