remove superflous import

--- a/ino/make/Makefile.deps.jinja
+++ b/ino/make/Makefile.deps.jinja
@@ -1,5 +1,5 @@
 
-{% from "Makefile.common.jinja" import iquote, src_build_dir with context %}
+{% from "Makefile.common.jinja" import iquote with context %}
 
 {% set src_build_dir = e.build_dir|pjoin(src_dir|basename) %}
 
